--- a/README
+++ b/README
@@ -29,8 +29,7 @@ Then we need to install all of the dependencies we can with aptitude (or
 whatever you want to use):
 
   sudo aptitude install python-cherrypy3 python-cheetah python-imaging \
-    python-cjson python-celementtree python-setuptools python-mutagen \
-    python-gst0.10 couchdb
+    python-cjson python-setuptools python-mutagen python-gst0.10 couchdb
 
 Followed by:
 
@@ -50,8 +49,9 @@ listening to music. Hopefully.
 There's a very basic plugin for Rhythmbox which can add a Blofeld server
 as a source. The plugin is in the extra directory, and you need to drop the
 whole blofeld-rhythmbox folder into ~/.local/share/rhythmbox/plugins and then
-edit __init__.py and replace PATH_TO_BLOFELD with the path to your Blofeld.
-Then write a UI to make that configurable and send me a pull request.
+edit __init__.py and replace PATH_TO_BLOFELD with the path to your Blofeld and
+fill in the USERNAME and PASSWORD variables if you need those. Then write a UI
+to make all that configurable and send me a pull request.
 
 There's also a pretty useful JSON API that I don't feel like documenting right
 now.
