--- a/README
+++ b/README
@@ -5,11 +5,7 @@ now, but it does support cover art, automatic transcoding and a few other
 things. The plan eventually is to add DAAP server capabailities and uPNP/DLNA
 capabilities to basically have a be-all end-all music server.
 
-This thing is a monster. I'm not joking. Trying to get this thing running on
-your machine at this stage is just simply not recommended, but I know some
-people just can't help themselves, so here's what you need to do. First things
-first, save yourself a lot of pain and heartache and only attempt this on 
-Ubuntu 9.10 or newer. Here's what you're going to need:
+Blofeld uses the following application and libraries:
 
  * CherryPy 3 ( http://www.cherrypy.org/ )
  * Cheetah ( http://www.cheetahtemplate.org/ )
@@ -19,28 +15,23 @@ Ubuntu 9.10 or newer. Here's what you're going to need:
  * Gstreamer ( http://www.gstreamer.net/ )
  * CouchDB ( http://couchdb.apache.org/ )
 
-On Ubuntu, we first need to add the quodlibet-unstable PPA to get a newer
-version of mutagen:
+If you're using Ubuntu Karmic or newer, installation is as easy as using the
+PPA I have set up. You can add it by running the following at a terminal:
 
-  sudo add-apt-repository ppa:lazka/dumpingplace
-  sudo aptitude update
+    sudo add-apt-repository ppa:dwhayes/ppa
 
-Then we need to install all of the dependencies we can with aptitude (or
-whatever you want to use):
+Then just updated your sources and install blofeld;
 
-  sudo aptitude install python-cherrypy3 python-cheetah python-imaging \
-    python-cjson python-setuptools python-mutagen python-gst0.10 couchdb
+    sudo aptitude update
+    sudo aptitude install blofeld
 
-Followed by:
+Currently, the PPA packages install Blofeld as a system wide service. A config
+file will be created automatically and placed at /etc/blofeld/blofeld.cfg
+Be sure and edit this file and tell it the correct path to your music if
+nothing else. Blofeld will start automatically at boot time, or you can start
+it manually with this command:
 
-  sudo easy_install couchdbkit
-
-There is a couchdbkit package for Lucid, but it appears to be broken somehow
-and won't actually work, hence having to install it with easy_install.
-
-Then you just need to run Blofeld.py. It will create a configuration file 
-called blofeld.cfg. Any of the options there that you might want to change
-should be pretty self explanatory.
+    sudo start blofeld
 
 Once you're up and running, point your web browser to http://localhost:8083/
 and hopefully you'll see the web interface and be able to start browsing and
