Remove distutils, make build work properly

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,4 @@
+2010-08-11	Dave Hayes <dwhayes@gmail.com>
 
-
+	* *: The ChangeLog is auto-generated when releasing. If you are
+	seeing this, use 'git log' for a detailed list of changes.
