Convert NEWS to Unix line endings. Ugh

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-                      *** ATTENTION WINDOWS USERS ***
+﻿                      *** ATTENTION WINDOWS USERS ***
 ================================================================================
 After installing Blofeld, the first time you run it, the program will create
 a configuration file and then immediately exit. If you music is not in your
